AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libdatacarousel.a

noinst_HEADERS = \
	ait.h \
	dsmcc.h \
	ints.h \
	unts.h \
	mpe_fec.h \
	datagram.h \
	dsmcc_ddb.h \
	dsmcc_unm.h \
	dsmcc_unm_dsi.h \
	dsmcc_unm_dii.h \
	dsmcc_unm_dlcancel.h \
	dsmcc_misc.h \
	dsmcc_grpinfind.h \
	biop.h \
	biop_dsm.h \
	biop_message.h \
	biop_tag_tap.h \
	biop_modinfo.h \
	biop_servgatinf.h \
	iop_ior.h \
	mhp_misc.h \
	llc_snap.h


libdatacarousel_a_SOURCES = \
	ait.c \
	dsmcc.c \
	ints.c \
	unts.c \
	mpe_fec.c \
	datagram.c \
	dsmcc_ddb.c \
	dsmcc_unm.c \
	dsmcc_unm_dsi.c \
	dsmcc_unm_dii.c \
	dsmcc_unm_dlcancel.c \
	dsmcc_misc.c \
	dsmcc_grpinfind.c \
	biop.c \
	biop_dsm.c \
	biop_message.c \
	biop_tag_tap.c \
	biop_modinfo.c \
	biop_servgatinf.c \
	iop_ior.c \
	mhp_misc.c \
	llc_snap.c

