AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libdescriptors.a

noinst_HEADERS = \
	descriptor.h \
	dvb_descriptor.h \
	mpeg_descriptor.h \
	dsmcc_carousel_descriptor.h \
	dsmcc_int_unt_descriptor.h \
	mhp_ait_descriptor.h \
	tva_rnt_descriptor.h \
	descriptor_misc.h


libdescriptors_a_SOURCES = \
	descriptor.c \
	dvb_descriptor.c \
	mpeg_descriptor.c \
	dsmcc_carousel_descriptor.c \
	dsmcc_int_unt_descriptor.c \
	mhp_ait_descriptor.c \
	tva_rnt_descriptor.c \
	descriptor_misc.c


