AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libmisc.a

noinst_HEADERS = \
	cmdline.h \
	helper.h \
	hexprint.h \
	output.h \
	pkt_time.h \
	pid_mem.h \
	packet_mem.h \
	print_header.h \
	crc32.h \
	sig_abort.h


libmisc_a_SOURCES = \
	cmdline.c \
	helper.c \
	hexprint.c \
	output.c \
	pkt_time.c \
	pid_mem.c \
	packet_mem.c \
	print_header.c \
	crc32.c \
	sig_abort.c


