AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libpes.a

noinst_HEADERS = \
	pespacket.h \
	pes_std.h \
	pes_dsmcc.h \
	pes_psm.h \
	pes_psdir.h \
	pes_data.h \
	pes_data_sync.h \
	pes_data_ebu.h \
	pes_misc.h \
	mpeg_packheader.h \
	mpeg_sysheader.h \
	mpeg2_video.h 


libpes_a_SOURCES = \
	pespacket.c \
	pes_std.c \
	pes_dsmcc.c \
	pes_psm.c \
	pes_psdir.c \
	pes_data.c \
	pes_data_sync.c \
	pes_data_ebu.c \
	pes_misc.c \
	mpeg_packheader.c \
	mpeg_sysheader.c \
	mpeg2_video.c 


