AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libsections.a

noinst_HEADERS = \
	sectables.h \
	bat.h \
	cat.h \
	dit.h \
	eit.h \
	eit.h \
	mdt.h \
	nit.h \
	pat.h \
	pmt.h \
	rst.h \
	sdt.h \
	sit.h \
	st.h \
	tdt.h \
	tot.h \
	tsdt.h \
	emm_ecm.h 


libsections_a_SOURCES = \
	sectables.c \
	bat.c \
	cat.c \
	dit.c \
	eit.c \
	mdt.c \
	nit.c \
	pat.c \
	pmt.c \
	rst.c \
	sdt.c \
	sit.c \
	st.c \
	tdt.c \
	tot.c \
	tsdt.c \
	emm_ecm.c 


