AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libprivatePremiereDE.a

noinst_HEADERS = \
	premiere_de.h \
	dvb_descriptor_premiere.h \
	section_premiere_cit.h \
	section_premiere_cpt.h


libprivatePremiereDE_a_SOURCES = \
	premiere_de.c \
	dvb_descriptor_premiere.c \
	section_premiere_cit.c \
	section_premiere_cpt.c 

